semantics/tests/parser/invalid/parse_invalid_double_integer_unary.fpl
   var a = 1;
   let b = --a
